# runtime-type-checker

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
runtime_type_checker/: __init__.py  _checker.py  _checkers.py  _decorator.py  _validation.py  typing_inspect_extensions.py  utils.py
tests/: __init__.py  fixtures.py  test_runtime_type_checker.py
