[tool.poetry]
name = "runtime-type-checker"
version = "0.2.0"
description = "Runtime-type-checker performs type check at runtime with help of type annotations"
license = "MIT"
authors = ["PJCampi <pierrejean.campigotto@gmail.com>"]
readme = "README.md"
repository="https://github.com/pjcampi/runtime-type-checker"
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
packages = [
    { include = "runtime_type_checker" },
    { include = "tests", format = "sdist" },
]
include = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.6.1"
typing_inspect = "^0.6.0"
dataclasses = { version = "0.7", python = "~3.6" }

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
flake8 = "^3.8.1"
tox = "^3.15.0"
pytest-coverage = "^0.0"
mypy = "^0.770"
pre-commit = "^2.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
